--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "test": "SET \"NODE_ENV=test\" && mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,9 @@
     "mongoose": "^5.3.6"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.5"
   }
 }
