--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server.js",
     "test": "SET \"NODE_ENV=test\" && mocha --exit"
   },
   "repository": {
@@ -18,10 +18,15 @@
   },
   "homepage": "https://github.com/declanbaldwin/Bitcoin#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "mongoose": "^5.3.6"
+    "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.6",
+    "validator": "^10.9.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
