--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bitcoin",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "SET \"NODE_ENV=test\" && mocha --exit"
