adding node version to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "8.11.1"
+  },
   "scripts": {
     "start": "node server.js",
     "test": "SET \"NODE_ENV=test\" && mocha --exit"
